fixed layout problem in layers page

--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -157,7 +157,7 @@
 .poweroutage {
   background-image: url(/assets/resmap_poweroutage.png);
 }
- 
+
 .powerplant {
   background-image: url(/assets/resmap_powerplant.png);
 }
@@ -253,53 +253,52 @@ button::-moz-focus-inner {
 }
 
 .center {
-  margin-left:auto; 
-  margin-right: auto; 
-  display:block;
+  margin-left:auto;
+  margin-right: auto;
 }
 
 /* Used for the Switch effect: */
-	.cb-enable, .cb-disable, .cb-enable span, .cb-disable span { background: url(/assets/on_off.png) repeat-x; display: block; float: left; height: 22px; }
-	
-  .cb-enable span, .cb-disable span { 
-    line-height: 22px; 
-    display: block; 
-    background-repeat: no-repeat; 
-    font-weight: bold; 
+  .cb-enable, .cb-disable, .cb-enable span, .cb-disable span { background: url(/assets/on_off.png) repeat-x; display: block; float: left; height: 22px; }
+
+  .cb-enable span, .cb-disable span {
+    line-height: 22px;
+    display: block;
+    background-repeat: no-repeat;
+    font-weight: bold;
   }
-	
-  .cb-enable span { 
-    background-position: 0px; 
+
+  .cb-enable span {
+    background-position: 0px;
     width: 30.5px;
   }
-	
-  .cb-disable span { 
+
+  .cb-disable span {
     background-position: -72px;
     width: 30.5px;
   }
-	
-  .cb-disable.selected { 
-    background-position: 0 -22px; 
+
+  .cb-disable.selected {
+    background-position: 0 -22px;
   }
-	
-  .cb-disable.selected span { 
-    background-position: -30.5px; 
+
+  .cb-disable.selected span {
+    background-position: -30.5px;
     width: 20.5px;
   }
-	
-  .cb-enable.selected { 
-    background-position: 52.5px; 
+
+  .cb-enable.selected {
+    background-position: 52.5px;
   }
-	.cb-enable.selected span { 
-    background-position: 103px; 
+  .cb-enable.selected span {
+    background-position: 103px;
     width: 20.5px;
-    color: #fff; 
+    color: #fff;
   }
-	.switch label { 
-    cursor: pointer; 
+  .switch label {
+    cursor: pointer;
   }
   .field {
-    display: inline-block; 
+    display: inline-block;
     float: left;
     margin-right: 5px;
   }
